# Shorti

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
src/: api.py  crud.py  database.py  models.py  schemas.py  settings.py  utils.py
tests/: test_app.py
