[tool.poetry]
name = "shortly"
version = "0.1.0"
description = ""
authors = ["Martin Wanczyk <wanczyk.martin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.0"}
sqlalchemy = "^2.0.7"
alembic = "^1.10.2"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
